--- a/contact.html
+++ b/contact.html
@@ -70,13 +70,13 @@
 		          	<div class="icon">
 		          		<span class="icon-map-o"></span>
 		          	</div>
-		            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p><span>Address:</span> No.G47 Jalan Masai Jaya 1, Johor Bahru, Johor.</p>
 		          </div>
 		          <div class="col-md-4 text-center border-height py-4">
 		          	<div class="icon">
 		          		<span class="icon-mobile-phone"></span>
 		          	</div>
-		            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><span>Phone:</span> <a href="tel://1234567920">+6 01129712312</a></p>
 		          </div>
 		          <div class="col-md-4 text-center py-4">
 		          	<div class="icon">
@@ -161,8 +161,8 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">No.G47 Jalan Masai Jaya 1, Johor Bahru, Johor.</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+6 011291712312</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
 	            </div>
